[package]
name = "dirt-r-ee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"clap" = { version = "4.4.8", features = ["derive"] }
"rayon" = "1.8.0"
"colored" = "2.0.4"
clipboard = "0.5.0"

[dev-dependencies]
"tempfile" = "3.8.1"
