[package]
name = "dirt-r-ee"
version = "0.2.1"
edition = "2021"
authors = ["Cal Courtney <calthejuggler@gmail.com>"]
license = "MIT"
description = "A CLI tool for printing the structure of a given directory in a tree."
readme = "README.md"
homepage = "https://github.com/calthejuggler/dirt-r-ee"
repository = "https://github.com/calthejuggler/dirt-r-ee"
keywords = ["cli", "dir", "dirtree", "search"]
categories = ["command-line-utilities"]

[dependencies]
"clap" = { version = "4.4.8", features = ["derive"] }
"rayon" = "1.8.0"
"colored" = "2.0.4"
"clipboard" = "0.5.0"

[dev-dependencies]
"tempfile" = "3.8.1"

[[bin]]
name = "dirtee"
path = "src/main.rs"
